--- a/templates/pacientes/estado_animo/mi_estado_animo_confirmar_delete_form.html
+++ b/templates/pacientes/estado_animo/mi_estado_animo_confirmar_delete_form.html
@@ -17,6 +17,7 @@ Diario Médico - Eliminar Estado de Ánimo
                           
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Estados de ánimo</p>
             <div class="col-lg-6">
             <div class="well">
                        
