--- a/templates/pacientes/estado_animo/mi_estado_animo_listar_form.html
+++ b/templates/pacientes/estado_animo/mi_estado_animo_listar_form.html
@@ -18,6 +18,7 @@ Diario Médico - Listar Estado de Ánimo
                           
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Estados de ánimo</p>
             <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
