--- a/templates/pacientes/medicionesclinicas/colesterol/mis_mediciones_clinicas_colesterol_form.html
+++ b/templates/pacientes/medicionesclinicas/colesterol/mis_mediciones_clinicas_colesterol_form.html
@@ -21,6 +21,7 @@ Diario Médico - Ingresar Colesterol
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Colesterol & Triglicéridos</p>
                                          <div class="col-lg-2">
                     <div class="well well-sm">
                     <div class="alert alert-info">
