--- a/templates/pacientes/medicionesclinicas/gluco/mis_mediciones_clinicas_gluco_confirmar_delete_form.html
+++ b/templates/pacientes/medicionesclinicas/gluco/mis_mediciones_clinicas_gluco_confirmar_delete_form.html
@@ -1,7 +1,7 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Eliminar Glicemia
+Diario Médico - Eliminar Glucemia
 {% endblock %}
 
 {% block content %}
@@ -20,6 +20,7 @@ Diario Médico - Eliminar Glicemia
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Glucemia</p>
                    <div class="col-lg-6">
             <div class="well">
                        
