--- a/templates/pacientes/medicionesclinicas/hemoglobina/mis_mediciones_clinicas_hemoglobina_confirmar_delete_form.html
+++ b/templates/pacientes/medicionesclinicas/hemoglobina/mis_mediciones_clinicas_hemoglobina_confirmar_delete_form.html
@@ -20,6 +20,7 @@ Diario Médico - Eliminar Hemoglobina
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Hemoglobina Glicocidada</p>
                    <div class="col-lg-6">
             <div class="well">
                        
