--- a/templates/pacientes/medicionesclinicas/peso/mis_mediciones_clinicas_peso_confirmar_delete_form.html
+++ b/templates/pacientes/medicionesclinicas/peso/mis_mediciones_clinicas_peso_confirmar_delete_form.html
@@ -20,6 +20,7 @@ Diario Médico - Eliminar Peso
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Peso</p>
                    <div class="col-lg-6">
             <div class="well">
                        
