--- a/templates/pacientes/medicionesclinicas/presion/mis_mediciones_clinicas_presion_form.html
+++ b/templates/pacientes/medicionesclinicas/presion/mis_mediciones_clinicas_presion_form.html
@@ -21,6 +21,7 @@ Diario Médico - Ingresar Presión Arterial
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Presión arterial</p>
                                          <div class="col-lg-3">
                     <div class="well well-sm">
                     <div class="alert alert-info">
