--- a/templates/pacientes/medicionesclinicas/talla/mis_mediciones_clinicas_talla_confirmar_delete_form.html
+++ b/templates/pacientes/medicionesclinicas/talla/mis_mediciones_clinicas_talla_confirmar_delete_form.html
@@ -20,6 +20,7 @@ Diario Médico - Eliminar Talla
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Talla</p>
                    <div class="col-lg-6">
             <div class="well">
                        
