--- a/templates/pacientes/medicionesclinicas/talla/mis_mediciones_clinicas_talla_form.html
+++ b/templates/pacientes/medicionesclinicas/talla/mis_mediciones_clinicas_talla_form.html
@@ -21,6 +21,7 @@ Diario Médico - Ingresar Talla
                    
                             </div>
                             <div class="panel-body">
+                             <p class="navbar-text">Talla</p>
                                          <div class="col-lg-3">
                     <div class="well well-sm">
                     <div class="alert alert-info">
