--- a/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_form.html
+++ b/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_form.html
@@ -17,7 +17,8 @@ Diario Médico - Ingresar Síntomas
                             {% include 'pacientes/menu_diario_medico_sintomas.html' %}
                                 
                             </div>
-                            <div class="panel-body">	
+                            <div class="panel-body">
+                            <p class="navbar-text">Síntomas glucémicos</p>	
                             <div class="col-lg-4">
                     <div class="well well-sm">
                     <div class="alert alert-info">
