--- a/templates/pacientes/sintomas/mis_sintomas_listar_form.html
+++ b/templates/pacientes/sintomas/mis_sintomas_listar_form.html
@@ -17,6 +17,7 @@ Diario Médico - Listar Síntomas
                                 
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Síntomas</p>
             <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
