--- a/templates/pacientes/citas/mis_proximas_citas_form.html
+++ b/templates/pacientes/citas/mis_proximas_citas_form.html
@@ -5,16 +5,19 @@ Diario Médico - Mis Próximas Citas
 {% endblock %}
 
 {% block content %}
-
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+</p>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                            <div class="panel-heading">
-                                <a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Citas</button></a>
+                                <a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-clock-o"></i> Citas</button></a>
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Citas</p>
                                            <div class="col-lg-3">
                     <div class="well well-sm">
                     <div class="alert alert-info">
