--- a/templates/pacientes/citas/mis_proximas_citas_listar_form.html
+++ b/templates/pacientes/citas/mis_proximas_citas_listar_form.html
@@ -6,14 +6,17 @@ Diario Médico - Listar Próximas Citas
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                            <div class="panel-heading">
-                                <a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Citas</button></a>
+                                <a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-clock-o"></i> Citas</button></a>
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Citas</p>
                <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
@@ -26,14 +29,19 @@ Diario Médico - Listar Próximas Citas
                                     <thead>
                                         <tr>
           
-                                            <th>Cita</th>
-                                         
+                                            <th>Centro</th>
+                                            <th>Nombre especialista</th>
+                                            <th>Fecha</th>
+                                            <th>Hora</th>
                                         </tr>
                                     </thead>
                                     {% for cita in object_list %}
                                     <tbody>
                                         <tr>
                                             <td>{{cita.proveedor}}</td>
+                                            <td>{{cita.nombre_especialista}}</td>
+                                            <td>{{cita.fecha}}</td>
+                                            <td>{{cita.hora}}</td>
                                              <td>
                                                  <a href={% url 'eliminar_cita_paciente' cita.id %}>Eliminar</a>
                                                
