--- a/templates/pacientes/estado_animo/mi_estado_animo_form.html
+++ b/templates/pacientes/estado_animo/mi_estado_animo_form.html
@@ -16,7 +16,8 @@ Diario Médico - Ingresar Estado de Ánimo
                   <a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Estado de ánimo actual</button></a>
                           
                             </div>
-                            <div class="panel-body">	
+                            <div class="panel-body">
+                            <p class="navbar-text">Estados de ánimo</p>	
                             <div class="col-lg-4">
                     <div class="well well-sm">
                     <div class="alert alert-info">
