--- a/templates/pacientes/medicionesclinicas/colesterol/mis_mediciones_clinicas_colesterol_confirmar_delete_form.html
+++ b/templates/pacientes/medicionesclinicas/colesterol/mis_mediciones_clinicas_colesterol_confirmar_delete_form.html
@@ -20,6 +20,7 @@ Diario Médico - Eliminar Colesterol
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Colesterol & Triglicéridos</p>
                    <div class="col-lg-6">
             <div class="well">
                        
