--- a/templates/pacientes/medicionesclinicas/hemoglobina/mis_mediciones_clinicas_hemoglobina_listar_form.html
+++ b/templates/pacientes/medicionesclinicas/hemoglobina/mis_mediciones_clinicas_hemoglobina_listar_form.html
@@ -20,6 +20,7 @@ Diario Médico - Listar Hemoglobina
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Hemoglobina Glicocidada</p>
                         <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
