--- a/templates/pacientes/medicionesclinicas/peso/mis_mediciones_clinicas_peso_form.html
+++ b/templates/pacientes/medicionesclinicas/peso/mis_mediciones_clinicas_peso_form.html
@@ -21,6 +21,7 @@ Diario Médico - Ingresar Peso
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Peso</p>
                                          <div class="col-lg-6">
                     <div class="well well-sm">
                     <div class="alert alert-info">
