--- a/templates/pacientes/medicionesclinicas/presion/mis_mediciones_clinicas_presion_confirmar_delete_form.html
+++ b/templates/pacientes/medicionesclinicas/presion/mis_mediciones_clinicas_presion_confirmar_delete_form.html
@@ -20,6 +20,7 @@ Diario Médico - Eliminar Presión Arterial
                    
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Presión arterial</p>
                    <div class="col-lg-6">
             <div class="well">
                        
