--- a/templates/pacientes/menu_diario_medico.html
+++ b/templates/pacientes/menu_diario_medico.html
@@ -9,8 +9,10 @@
                   <a href="{% url 'listar_estado_animo_paciente' %}"><button class="btn"><i class="icon-thumbs-up icon-large"></i><br>Mi estado de ánimo</button></a>
                   <a href="{% url 'listar_sintomas_paciente' %}"><button class="btn"><i class="icon-book icon-large"></i><br>Mis síntomas</button></a>
                   <a href="{% url 'listar_peso_paciente' %}"><button class="btn"><i class="icon-user-md icon-large"></i><br>Mis mediciones médicas</button></a>
-                  <a href="/home/profesional/"><button class="btn"><i class="icon-th-list icon-large"></i><br>Mis rutinas de salud</button></a>
-                  <a href="/home/social"><button class="btn"><i class="icon-time icon-large"></i><br>Mis citas</button></a>
+                  <a href="{% url 'listar_medicamento_paciente' %}"><button class="btn"><i class="fa fa-medkit fa-2x"></i><br>Mis medicamentos</button></a>
+                  <a href="{% url 'listar_alimentacion_paciente' %}"><button class="btn"><i class="icon-th-list icon-large"></i><br>Mis rutinas de salud</button></a>
+                  <a href="{% url 'listar_alimentacion_paciente' %}"><button class="btn"><i class="fa fa-stethoscope fa-2x"></i><br>Mis resultados médicos</button></a>
+                  <a href="{% url 'listar_cita_paciente' %}"><button class="btn"><i class="icon-time icon-large"></i><br>Mis citas</button></a>
 
               </div>
           </div>
