--- a/templates/pacientes/menu_diario_medico_rutinas.html
+++ b/templates/pacientes/menu_diario_medico_rutinas.html
@@ -1,2 +1,2 @@
-   <a href="{% url 'listar_ejercicio_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Ejercicio</button></a>
-                    <a href="{% url 'listar_alimentacion_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Alimentación</button></a>
+
+                    <a href="{% url 'listar_alimentacion_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-renren"></i> Alimentación</button></a>
