--- a/templates/pacientes/menu_diario_medico_sintomas.html
+++ b/templates/pacientes/menu_diario_medico_sintomas.html
@@ -1,4 +1,4 @@
 <h3 class="panel-title"> </h3>
                   <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-book"></i> Síntomas generales</button></a>
 
-                    <a href="{% url 'listar_sintomas_alteracion_glicemica_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-book"></i> Síntomas glicémicos</button></a>
+                    <a href="{% url 'listar_sintomas_alteracion_glicemica_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-book"></i> Síntomas glucémicos</button></a>
