--- a/templates/pacientes/rutinas/mis_rutinas_alimentacion_confirmar_delete_form.html
+++ b/templates/pacientes/rutinas/mis_rutinas_alimentacion_confirmar_delete_form.html
@@ -6,9 +6,10 @@ Diario Médico - Eliminar Rutinas de Alimentación
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
-
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
@@ -16,6 +17,7 @@ Diario Médico - Eliminar Rutinas de Alimentación
                                 
                             </div>
                             <div class="panel-body">
+                             <p class="navbar-text">Alimentación</p>
    <div class="col-lg-6">
             <div class="well">
                        
