--- a/templates/pacientes/rutinas/mis_rutinas_alimentacion_form.html
+++ b/templates/pacientes/rutinas/mis_rutinas_alimentacion_form.html
@@ -6,9 +6,11 @@ Diario Médico - Mis Rutinas de Alimentación
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
-
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+</p>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
@@ -16,6 +18,7 @@ Diario Médico - Mis Rutinas de Alimentación
                                 
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Alimentación</p>
                   <div class="col-lg-3">
                     <div class="well well-sm">
                     <div class="alert alert-info">
