--- a/templates/pacientes/tratamientos/mis_medicamentos_form.html
+++ b/templates/pacientes/tratamientos/mis_medicamentos_form.html
@@ -6,14 +6,18 @@ Diario Médico - Ingresar Medicamento
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+</p>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
        <div class="panel-heading">
                               {% include 'pacientes/menu_diario_medico_tratamientos.html' %} 
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Medicamentos</p>
                                        <div class="col-lg-3">
                     <div class="well well-sm">
                     <div class="alert alert-info">
