--- a/templates/pacientes/tratamientos/mis_tratamientos_listar_medicamentos_form.html
+++ b/templates/pacientes/tratamientos/mis_tratamientos_listar_medicamentos_form.html
@@ -6,15 +6,17 @@ Diario Médico - Listar Medicamentos
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
-
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
        <div class="panel-heading">
                                {% include 'pacientes/menu_diario_medico_tratamientos.html' %} 
                             </div>
                             <div class="panel-body">
+                            <p class="navbar-text">Medicamentos</p>
             <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
@@ -39,7 +41,10 @@ Diario Médico - Listar Medicamentos
                                                  <a href={% url 'eliminar_medicamento_paciente' medicamento.id %}>Eliminar</a>
                                                
                                             </td>
-                                            
+                                             <td>
+                                                <a href={% url 'ver_detalles_medicamento_paciente' medicamento.id %}>Ver detalle</a>
+                                               
+                                            </td>
                                         </tr>
                                     </tbody>
                                     {% endfor %}
